@@ -1,4 +1,4 @@
-.TH nget 1 "27 Nov 2002"
+.TH nget 1 "24 Dec 2002"
 .SH NAME
 nget \- retrieve files from NNTP (usenet news) hosts
 .SH SYNOPSIS
@@ -33,6 +33,7 @@ and the possibility that the commands can be quite slow if the server is overloa
 .IP "-g/--group group(s)"
 Update the list of available files in group(s).
 Multiple groups can be specified by seperating them with commas.
+All cached groups can be selected with "*".
 If a host has been specified before
 with -h, it will retrieve headers only from that host.  Otherwise it will
 retrieve headers for all hosts above _glevel (see configuration section for
