@@ -8,6 +8,7 @@
   * Fix segfault if uulib gets confused and UUGetFileListItem returns an item with a NULL filename. (reported by joakim verona)
   * Add support for specifying multiple groups (comma seperated) to -g/-G/-x for updating/searching/flushing several groups at once.
   * Fix exception when using -i and no parts of a file could be retrieved.
+  * Add "*" as a special alias for selecting all cached groups.
 
 2002-10-28 v0.22.1:
   * Fix segv on saving text file if no uulib info was recorded.
